# SeldWeb

./: LICENSE  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
SeldWeb/: asgi.py  settings.py  urls.py  wsgi.py
reg/: apps.py  forms.py  models.py  urls.py  views.py
reg/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_alter_profile_avatar.py
reg/templates/reg/: change_password.html  login.html  profile.html  signup.html
rest/: serializers.py  urls.py  views.py
seld/: apps.py  urls.py  views.py
seld/static/seld/content/: main.css  output.css  queries.css  settings.css
seld/templates/errors/: 403.html  404.html  500.html
seld/templates/seld/: about.html  index.html  layout.html  navbar.html
set/: admin.py  forms.py  models.py  urls.py  views.py
set/migrations/: 0001_initial.py
set/templates/set/: devices.html  keys.html
static/seld/content/: input.css  main.css  queries.css  settings.css
