[project]
name = "seldweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django~=5.1.5",
    "django-debug-toolbar~=5.0.1",
    "django-userforeignkey>=0.5.0",
    "djangorestframework~=3.15.2",
    "djoser>=2.3.3",
    "drf-extensions>=0.8.0",
    "gunicorn>=23.0.0",
    "pillow~=11.1.0",
    "pytz~=2025.1",
    "whitenoise>=6.9.0",
]
